# trace

./: .env.example  .gitignore  CLAUDE.md  README.md  chains.example.yml  compose.selfhost.yml  docker-compose.yml  eslint.config.js  package-lock.json  package.json  progress.txt  railway.json
.github/workflows/: publish-sdk.yml
.serena/: project.yml
docs/: CHARTING.md  CODEBASE_MAP.md  DEPLOY.md  EXPLORER_API_SPEC.md  GIB_SHOW.md  SELF_HOSTING.md  SPEC.md  chifra-pagination-issue.md  session-checkpoint-2026-05-31-pm.md  session-checkpoint-2026-05-31.md  session-checkpoint-2026-06-02-pm.md  session-checkpoint-2026-06-02.md  session-checkpoint-2026-06-03-pm-holdings-all-transfers.md  session-checkpoint-2026-06-03.md  session-checkpoint-2026-06-05.md  session-checkpoint-2026-06-09-pm.md  session-checkpoint-2026-06-09-pm2.md  session-checkpoint-2026-06-09.md
docs/features/: 01-transaction-simulator.md  02-transaction-explorer.md  03-monitoring-alerting.md  04-virtual-testnets.md  05-debugger.md  06-enhanced-rpc.md  07-web3-actions.md  08-step-debugger.md
docs/superpowers/specs/: 2026-03-25-debugger-source-slither-infra-design.md  2026-03-25-fork-simulation-state-diffs-design.md  2026-05-29-multichain-etherscan-labels-design.md  2026-06-01-evm-toolkit-siwe-encryption-contract.md  (+3 more)
examples/: README.md
examples/widgets-demo/: index.html  package.json  tsconfig.json  vite.config.ts
scripts/: deploy-ipfs.sh
shared/: package.json
shared/src/: index.ts
substreams/: .gitignore  Cargo.toml  README.md  schema.sql  substreams.yaml
substreams/src/: lib.rs
(+2 files in other folders)
